package edu.hitsz.animate;

/**
 * 所有的动画类型
 * @author Chiro
 */
public enum AnimateType {
    // 未知
    Unknown,
    // 线性
    Linear
}
